k8s/nodejs-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: nodejs
  name: nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: nodejs
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.network/app-network: "true"
        io.kompose.service: nodejs
    spec:
      imagePullSecrets:
        - name: dockerconfigjson-github-com
      containers:
        - env:
            - name: MONGO_HOST
              value: db
            - name: MONGO_USERS_HOST
              value: db
            - name: MONGO_USER
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: MONGO_USER
            - name: MONGO_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: MONGO_PASSWORD
            - name: NODE_ENV
              value: production
            - name: ACCUMULATE_REQUESTS
              value: "1"
            - name: ADMIN_TELEGRAM_ID
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: ADMIN_TELEGRAM_ID
            - name: FORCE_HTTPS
              value: "1"
            - name: GRAPHITE_PREFIX
              value: algoprog
            - name: INN
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: INN
            - name: TELEGRAM_TOKEN
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: TELEGRAM_TOKEN
            - name: TINKOFF_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: TINKOFF_PASSWORD
            - name: TINKOFF_TERMINAL_KEY
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: TINKOFF_TERMINAL_KEY
            - name: USER_AGENT
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: USER_AGENT
            - name: TRANSLATE_FOLDER_ID
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: TRANSLATE_FOLDER_ID
            - name: TRANSLATE_API_KEY
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: TRANSLATE_API_KEY
            - name: EMAIL_USER
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: EMAIL_USER
            - name: EMAIL_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: EMAIL_PASSWORD
            - name: ALGOPROG_CHAT_ID
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: ALGOPROG_CHAT_ID
            - name: XSOLLA_MERCHANT_ID
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: XSOLLA_MERCHANT_ID
            - name: XSOLLA_PROJECT_ID
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: XSOLLA_PROJECT_ID
            - name: XSOLLA_API_KEY
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: XSOLLA_API_KEY
            - name: XSOLLA_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: XSOLLA_SECRET_KEY
            - name: UNITPAY_PUBLIC_KEY
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: UNITPAY_PUBLIC_KEY
            - name: UNITPAY_SECRET_KEY
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: UNITPAY_SECRET_KEY
            - name: UNITPAY_PUBLIC_KEY_ORG
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: UNITPAY_PUBLIC_KEY_ORG
            - name: UNITPAY_SECRET_KEY_ORG
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: UNITPAY_SECRET_KEY_ORG
            - name: EVOCA_LOGIN
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: EVOCA_LOGIN
            - name: EVOCA_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: EVOCA_PASSWORD
            - name: INVOICE_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: INVOICE_PASSWORD
            - name: INVOICE_IP_DATA
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: INVOICE_IP_DATA
            - name: INVOICE_IP_SIGNATURE
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: INVOICE_IP_SIGNATURE
            - name: PAYKEEPER_SERVER
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: PAYKEEPER_SERVER
            - name: PAYKEEPER_USER
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: PAYKEEPER_USER
            - name: PAYKEEPER_PASSWORD
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: PAYKEEPER_PASSWORD
            - name: BOT_PROXIES
              valueFrom:
                secretKeyRef:
                  name: mongo-secret
                  key: BOT_PROXIES
          image: ghcr.io/petr-kalinin/algoprog:master-latest
          imagePullPolicy: "Always"
          name: nodejs
          ports:
            - containerPort: 3000
            - containerPort: 1025
          resources: {}
          livenessProbe:
            httpGet:
              path: /api/ping
              port: 3000
            initialDelaySeconds: 120
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /api/ping
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 2        
      restartPolicy: Always
status: {}
