k8s/mgob-dep.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mgob
  labels:
    name: mgob
spec:
  ports:
  - port: 8090
    targetPort: 8090
  clusterIP: None
  selector:
    role: mongo-backup
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mgob
spec:
  serviceName: "mgob"
  replicas: 1
  selector:
    matchLabels:
      role: mongo-backup
  template:
    metadata:
      labels:
        role: mongo-backup
    spec:
      containers:
      - name: mgobd
        image: stefanprodan/mgob:edge
        imagePullPolicy: Always
        ports:
        - containerPort: 8090
          protocol: TCP
        volumeMounts:
        - name: mgob-storage
          mountPath: /storage
        - name: mgob-tmp
          mountPath: /tmp
        - name: mgob-tmp
          mountPath: /data
        - mountPath: /config
          name: mgob-secret
      volumes:
        - name: mgob-secret
          secret:
            secretName: mgob-secret
  volumeClaimTemplates:
  - metadata:
      name: mgob-storage
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 6Gi
  - metadata:
      name: mgob-tmp
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
