k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: algoprog-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - test.algoprog.ru
    - www.algoprog.ru
    - adina.algoprog.ru
    - archive.algoprog.ru
    - algoprog.ru
    - algoprog.org
    - www.algoprog.org
    - online.mathncode.kz
    - redash.algoprog.ru
    - notes.algoprog.ru
    - notes.algoprog.org
    - algoprog.kalinin.nnov.ru
    - %fve%
    - www.%fve%
    secretName: test-tls
  rules:
  - host: algoprog.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 3000
  - host: adina.algoprog.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-adina
            port:
              number: 3000
  - host: online.mathncode.kz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-adina
            port:
              number: 3000
  - host: www.algoprog.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 3000
  - host: algoprog.kalinin.nnov.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 3000
  - host: algoprog.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 3000
  - host: www.algoprog.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs
            port:
              number: 3000
  - host: archive.algoprog.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-archive
            port:
              number: 3000
  - host: redash.algoprog.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: redash
            port:
              number: 5000
  - host: notes.algoprog.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: progtexts2
            port:
              number: 80
  - host: notes.algoprog.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: progtexts2
            port:
              number: 80
  - host: %fve%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fve
            port:
              number: 80
  - host: www.%fve%
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fve
            port:
              number: 80
